fix _didSetupConstraints initial value

--- a/btc_viper_table/Code/View/viewcontroller.swift.liquid
+++ b/btc_viper_table/Code/View/viewcontroller.swift.liquid
@@ -10,7 +10,7 @@ import UIKit
 
 class {{ module_info.name }}ViewController: UIViewController, {{module_info.name}}ViewInput {
 
-    private var _didSetupConstraints = true
+    private var _didSetupConstraints = false
     private let _tableViewController: TableViewController
     private let _tableAdapter:{{ module_info.name }}TableAdapter
     
