--- a/btc_viper_table/Code/Presenter/presenter.swift.liquid
+++ b/btc_viper_table/Code/Presenter/presenter.swift.liquid
@@ -10,10 +10,6 @@ class {{ module_info.name }}Presenter: {{ module_info.name }}ModuleOutput {
 
     weak var view: {{ module_info.name }}ViewInput!
     var interactor: {{ module_info.name }}InteractorInput!
-
-    func viewIsReady() {
-
-    }
 }
 
 // MARK: {{ module_info.name }}ModuleInput
@@ -23,7 +19,9 @@ extension {{ module_info.name }}Presenter: {{ module_info.name }}ModuleInput {
 
 // MARK:  {{ module_info.name }}ViewOutput
 extension {{ module_info.name }}Presenter:  {{ module_info.name }}ViewOutput {
-  
+    func viewIsReady() {
+        view.setupInitialState()
+    }
 }
 
 // MARK: {{ module_info.name }}InteractorOutput
