--- a/btc_viper_table/Code/View/TableAdapter/view_table_adapter.swift.liquid
+++ b/btc_viper_table/Code/View/TableAdapter/view_table_adapter.swift.liquid
@@ -16,13 +16,13 @@ class {{ module_info.name }}TableAdapter: NSObject {
         _tableView = tableView
         super.init()
         _tableView.delegate = self
-        _tabelView.dataSource = self
+        _tableView.dataSource = self
     }
     
 }
 
 //MARK: UITableViewDataSourse
-extension {{ module_info.name }}TableAdapter: UITableViewDataSourse {
+extension {{ module_info.name }}TableAdapter: UITableViewDataSource {
 
     func tableView(tableView: UITableView,
                    numberOfRowsInSection section: Int) -> Int
