--- a/btc_viper_table/Code/Builder/builder.swift.liquid
+++ b/btc_viper_table/Code/Builder/builder.swift.liquid
@@ -1,5 +1,5 @@
 //
-//  {{ prefix }}{{ module_info.name }}{{ module_info.file_name }}
+//  {{ prefix }}{{ module_info.file_name }}
 //  {{ module_info.project_name }}
 //
 //  Created by {{ developer.name }} on {{ date }}.
@@ -8,7 +8,7 @@
 
 import UIKit
 
-    typealias {{ module_info.name }}ModuleBox = (viewController: {{ module_info.name }}ViewController, input: {{ module_info.name }}ModuleInput, output: {{ module_info.name }}ModuleOutput)
+typealias {{ module_info.name }}ModuleBox = (viewController: {{ module_info.name }}ViewController, input: {{ module_info.name }}ModuleInput, output: {{ module_info.name }}ModuleOutput)
 
 class {{ module_info.name }}Builder {
 
