--- a/btc_viper_table/Code/View/view_output.swift.liquid
+++ b/btc_viper_table/Code/View/view_output.swift.liquid
@@ -1,5 +1,5 @@
 //
-//  {{ module_info.name }}{{ module_info.file_name }}
+//  {{ module_info.file_name }}
 //  {{ module_info.project_name }}
 //
 //  Created by {{ developer.name }} on {{ date }}.
@@ -7,11 +7,6 @@
 //
 
 protocol {{ module_info.name }}ViewOutput {
-
-    /**
-        @author {{ developer.name }}
-        Notify presenter that view is ready
-    */
 
     func viewIsReady()
 }
