--- a/Code/Builder/builder.swift.liquid
+++ b/Code/Builder/builder.swift.liquid
@@ -13,7 +13,7 @@ typealias {{ module_info.name }}ModuleBox = (viewController: {{ module_info.name
 class {{ module_info.name }}Builder {
 
     func createModule() -> {{ module_info.name }}ModuleBox {
-        let viewController = {{ module_info.name }}ViewController(style: .Grouped)
+        let viewController = {{ module_info.name }}ViewController(style: .grouped)
         
         let presenter = {{ module_info.name }}Presenter()
         presenter.view = viewController
