--- a/Code/View/viewcontroller.swift.liquid
+++ b/Code/View/viewcontroller.swift.liquid
@@ -13,15 +13,17 @@ class {{ module_info.name }}ViewController: PSViewController, {{module_info.name
     fileprivate var didSetupConstraints = false
     fileprivate let tableViewController: UITableViewController
     fileprivate let tableAdapter: TableAdapter
-    
+    fileprivate let dataDisplayManager: {{module_info.name}}DataDisplayManager
+
     var output: {{ module_info.name }}ViewOutput!
     
     var tableView: UITableView {
         return self.tableViewController.tableView  
     }
     
-    init(style: UITableViewStyle)
+    init(style: UITableViewStyle, dataDisplayManager: {{module_info.name}}DataDisplayManager)
     {
+        self.dataDisplayManager = dataDisplayManager
         self.tableViewController = UITableViewController(style: style)
         self.tableAdapter = TableAdapter(tableView: tableViewController.tableView)
         super.init(nibName: nil, bundle: nil)
@@ -31,12 +33,9 @@ class {{ module_info.name }}ViewController: PSViewController, {{module_info.name
     required init?(coder aDecoder: NSCoder) {
         fatalError("init(coder:) has not been implemented")
     }
-}
 
 
-
-// MARK: Life cycle
-extension {{ module_info.name }}ViewController {
+    // MARK: Life cycle
   
     override func viewDidLoad() {
         super.viewDidLoad()
@@ -57,10 +56,8 @@ extension {{ module_info.name }}ViewController {
         }
         super.updateViewConstraints()
     }
-}
 
-// MARK: {{module_info.name}}ViewInput
-extension {{ module_info.name }}ViewController {
+    // MARK: {{module_info.name}}ViewInput
   
     func setupInitialState() {
     	self.setupTableView()
@@ -76,6 +73,10 @@ private extension {{ module_info.name }}ViewController {
 	func setupTableView() {
 
 	}
+
+    func setupDataDisplayManager() {
+
+    }
 }
 
 
