--- a/Code/Builder/builder.swift.liquid
+++ b/Code/Builder/builder.swift.liquid
@@ -13,7 +13,7 @@ typealias {{ module_info.name }}ModuleBox = (viewController: {{ module_info.name
 class {{ module_info.name }}Builder {
 
     func createModule() -> {{ module_info.name }}ModuleBox {
-        let dataDisplayManager = {module_info.name}}DataDisplayManager()
+        let dataDisplayManager = {{ module_info.name }}DataDisplayManager()
         let viewController = {{ module_info.name }}ViewController(style: .grouped, datadisplayManager: datadisplayManager)
         
         let presenter = {{ module_info.name }}Presenter()
