--- a/Code/View/viewcontroller.swift.liquid
+++ b/Code/View/viewcontroller.swift.liquid
@@ -61,6 +61,7 @@ class {{ module_info.name }}ViewController: PSViewController, {{module_info.name
   
     func setupInitialState() {
     	self.setupTableView()
+        self.setupDataDisplayManager()
         self.view.addSubview(self.tableViewController.view)
         self.tableViewController.didMove(toParentViewController: self)
         self.view.setNeedsUpdateConstraints()
