--- a/Code/View/viewcontroller.swift.liquid
+++ b/Code/View/viewcontroller.swift.liquid
@@ -72,7 +72,7 @@ class {{ module_info.name }}ViewController: PSViewController, {{module_info.name
 private extension {{ module_info.name }}ViewController {
 
 	func setupTableView() {
-
+        self.tableView.separatorStyle = .none
 	}
 
     func setupDataDisplayManager() {
