--- a/Code/View/viewcontroller.swift.liquid
+++ b/Code/View/viewcontroller.swift.liquid
@@ -7,6 +7,7 @@
 //
 
 import UIKit
+import SnapKit
 
 class {{ module_info.name }}ViewController: PSViewController, {{module_info.name}}ViewInput {
 
