add table back color

--- a/Code/View/viewcontroller.swift.liquid
+++ b/Code/View/viewcontroller.swift.liquid
@@ -73,6 +73,7 @@ private extension {{ module_info.name }}ViewController {
 
 	func setupTableView() {
         self.tableView.separatorStyle = .none
+        self.tableView.backgroundColor = UIColor(named: .background)
 	}
 
     func setupDataDisplayManager() {
