--- a/Code/Presenter/presenter.swift.liquid
+++ b/Code/Presenter/presenter.swift.liquid
@@ -6,10 +6,16 @@
 //  Copyright © {{ year }} {{ developer.company }}. All rights reserved.
 //
 
+
+private stuct {{ module_info.name }}State {
+	var isViewReady: Bool = false
+}
+
 class {{ module_info.name }}Presenter: {{ module_info.name }}ModuleOutput {
 
     weak var view: {{ module_info.name }}ViewInput!
     var interactor: {{ module_info.name }}InteractorInput!
+    var state = {{ module_info.name }}State()
 }
 
 // MARK: {{ module_info.name }}ModuleInput
@@ -20,7 +26,8 @@ extension {{ module_info.name }}Presenter: {{ module_info.name }}ModuleInput {
 // MARK: {{ module_info.name }}ViewOutput
 extension {{ module_info.name }}Presenter:  {{ module_info.name }}ViewOutput {
     func viewIsReady() {
-        view.setupInitialState()
+    	self.state.isViewReady = true
+        self.view.setupInitialState()
     }
 }
 
