--- a/Code/Presenter/presenter.swift.liquid
+++ b/Code/Presenter/presenter.swift.liquid
@@ -7,7 +7,7 @@
 //
 
 
-private stuct {{ module_info.name }}State {
+private struct {{ module_info.name }}State {
 	var isViewReady: Bool = false
 }
 
