--- a/Code/Interactor/interactor.swift.liquid
+++ b/Code/Interactor/interactor.swift.liquid
@@ -6,7 +6,7 @@
 //  Copyright © {{ year }} {{ developer.company }}. All rights reserved.
 //
 
-class {{ module_info.name }}Interactor: {{ module_info.name }}InteractorInput {
+final class {{ module_info.name }}Interactor: {{ module_info.name }}InteractorInput {
 
     weak var output: {{ module_info.name }}InteractorOutput!
 
