--- a/Code/Presenter/viewmodel_builder.swift.liquid
+++ b/Code/Presenter/viewmodel_builder.swift.liquid
@@ -6,7 +6,6 @@
 //  Copyright © {{ year }} {{ developer.company }}. All rights reserved.
 //
 
-protocol {{ module_info.name }}ViewInput: TableViewInput {
+final class {{ module_info.name }}ViewModelBuilder {
 
-    func setupInitialState()
 }
